ZOLParser.py
# Generated from ZOL.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class ZOLParser ( Parser ):

    grammarFileName = "ZOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'fun'", "'('", "')'", "'->'", "','", 
                     "':'", "'in'", "'struct'", "'{'", "';'", "'}'", "'enum'", 
                     "'='", "'if'", "'else'", "'while'", "'repeat'", "'for'", 
                     "'match'", "'_'", "'=>'", "'return'", "'asm'", "'*'", 
                     "'/'", "'%'", "'+'", "'-'", "'<<'", "'>>'", "'&'", 
                     "'|'", "'^'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'&&'", "'||'", "'!'", "'~'", "'i8'", "'u8'", 
                     "'i16'", "'u16'", "'bool'", "'fixed'", "'['", "']'", 
                     "'A'", "'B'", "'C'", "'D'", "'E'", "'H'", "'L'", "'BC'", 
                     "'DE'", "'HL'", "'IX'", "'IY'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENTIFIER", "INTEGER", "FLOAT", "BOOLEAN", "WS", 
                      "COMMENT", "MULTILINE_COMMENT", "META" ]

    RULE_program = 0
    RULE_functionDecl = 1
    RULE_paramList = 2
    RULE_param = 3
    RULE_structDecl = 4
    RULE_enumDecl = 5
    RULE_variableDecl = 6
    RULE_statement = 7
    RULE_block = 8
    RULE_ifStatement = 9
    RULE_whileStatement = 10
    RULE_repeatStatement = 11
    RULE_forStatement = 12
    RULE_matchStatement = 13
    RULE_matchCase = 14
    RULE_expressionStatement = 15
    RULE_returnStatement = 16
    RULE_asmBlock = 17
    RULE_expression = 18
    RULE_primary = 19
    RULE_arrayLiteral = 20
    RULE_structLiteral = 21
    RULE_typeSpec = 22
    RULE_register = 23

    ruleNames =  [ "program", "functionDecl", "paramList", "param", "structDecl", 
                   "enumDecl", "variableDecl", "statement", "block", "ifStatement", 
                   "whileStatement", "repeatStatement", "forStatement", 
                   "matchStatement", "matchCase", "expressionStatement", 
                   "returnStatement", "asmBlock", "expression", "primary", 
                   "arrayLiteral", "structLiteral", "typeSpec", "register" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    IDENTIFIER=64
    INTEGER=65
    FLOAT=66
    BOOLEAN=67
    WS=68
    COMMENT=69
    MULTILINE_COMMENT=70
    META=71

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZOLParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(ZOLParser.FunctionDeclContext,i)


        def structDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZOLParser.StructDeclContext)
            else:
                return self.getTypedRuleContext(ZOLParser.StructDeclContext,i)


        def enumDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZOLParser.EnumDeclContext)
            else:
                return self.getTypedRuleContext(ZOLParser.EnumDeclContext,i)


        def variableDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZOLParser.VariableDeclContext)
            else:
                return self.getTypedRuleContext(ZOLParser.VariableDeclContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZOLParser.StatementContext)
            else:
                return self.getTypedRuleContext(ZOLParser.StatementContext,i)


        def getRuleIndex(self):
            return ZOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZOLParser.T__0) | (1 << ZOLParser.T__1) | (1 << ZOLParser.T__7) | (1 << ZOLParser.T__8) | (1 << ZOLParser.T__11) | (1 << ZOLParser.T__13) | (1 << ZOLParser.T__15) | (1 << ZOLParser.T__16) | (1 << ZOLParser.T__17) | (1 << ZOLParser.T__18) | (1 << ZOLParser.T__21) | (1 << ZOLParser.T__22) | (1 << ZOLParser.T__27) | (1 << ZOLParser.T__41) | (1 << ZOLParser.T__42) | (1 << ZOLParser.T__43) | (1 << ZOLParser.T__44) | (1 << ZOLParser.T__45) | (1 << ZOLParser.T__46) | (1 << ZOLParser.T__47) | (1 << ZOLParser.T__48))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (ZOLParser.IDENTIFIER - 64)) | (1 << (ZOLParser.INTEGER - 64)) | (1 << (ZOLParser.FLOAT - 64)) | (1 << (ZOLParser.BOOLEAN - 64)))) != 0):
                self.state = 53
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 48
                    self.functionDecl()
                    pass

                elif la_ == 2:
                    self.state = 49
                    self.structDecl()
                    pass

                elif la_ == 3:
                    self.state = 50
                    self.enumDecl()
                    pass

                elif la_ == 4:
                    self.state = 51
                    self.variableDecl()
                    pass

                elif la_ == 5:
                    self.state = 52
                    self.statement()
                    pass


                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ZOLParser.IDENTIFIER, 0)

        def block(self):
            return self.getTypedRuleContext(ZOLParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(ZOLParser.ParamListContext,0)


        def typeSpec(self):
            return self.getTypedRuleContext(ZOLParser.TypeSpecContext,0)


        def getRuleIndex(self):
            return ZOLParser.RULE_functionDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = ZOLParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(ZOLParser.T__0)
            self.state = 59
            self.match(ZOLParser.IDENTIFIER)
            self.state = 60
            self.match(ZOLParser.T__1)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZOLParser.IDENTIFIER:
                self.state = 61
                self.paramList()


            self.state = 64
            self.match(ZOLParser.T__2)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZOLParser.T__3:
                self.state = 65
                self.match(ZOLParser.T__3)
                self.state = 66
                self.typeSpec(0)


            self.state = 69
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZOLParser.ParamContext)
            else:
                return self.getTypedRuleContext(ZOLParser.ParamContext,i)


        def getRuleIndex(self):
            return ZOLParser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = ZOLParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.param()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ZOLParser.T__4:
                self.state = 72
                self.match(ZOLParser.T__4)
                self.state = 73
                self.param()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ZOLParser.IDENTIFIER, 0)

        def typeSpec(self):
            return self.getTypedRuleContext(ZOLParser.TypeSpecContext,0)


        def register(self):
            return self.getTypedRuleContext(ZOLParser.RegisterContext,0)


        def getRuleIndex(self):
            return ZOLParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = ZOLParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(ZOLParser.IDENTIFIER)
            self.state = 80
            self.match(ZOLParser.T__5)
            self.state = 81
            self.typeSpec(0)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZOLParser.T__6:
                self.state = 82
                self.match(ZOLParser.T__6)
                self.state = 83
                self.register()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StructDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ZOLParser.IDENTIFIER)
            else:
                return self.getToken(ZOLParser.IDENTIFIER, i)

        def typeSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZOLParser.TypeSpecContext)
            else:
                return self.getTypedRuleContext(ZOLParser.TypeSpecContext,i)


        def getRuleIndex(self):
            return ZOLParser.RULE_structDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDecl" ):
                return visitor.visitStructDecl(self)
            else:
                return visitor.visitChildren(self)




    def structDecl(self):

        localctx = ZOLParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(ZOLParser.T__7)
            self.state = 87
            self.match(ZOLParser.IDENTIFIER)
            self.state = 88
            self.match(ZOLParser.T__8)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ZOLParser.IDENTIFIER:
                self.state = 89
                self.match(ZOLParser.IDENTIFIER)
                self.state = 90
                self.match(ZOLParser.T__5)
                self.state = 91
                self.typeSpec(0)
                self.state = 92
                self.match(ZOLParser.T__9)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self.match(ZOLParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnumDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ZOLParser.IDENTIFIER)
            else:
                return self.getToken(ZOLParser.IDENTIFIER, i)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(ZOLParser.INTEGER)
            else:
                return self.getToken(ZOLParser.INTEGER, i)

        def getRuleIndex(self):
            return ZOLParser.RULE_enumDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumDecl" ):
                return visitor.visitEnumDecl(self)
            else:
                return visitor.visitChildren(self)




    def enumDecl(self):

        localctx = ZOLParser.EnumDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_enumDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(ZOLParser.T__11)
            self.state = 102
            self.match(ZOLParser.IDENTIFIER)
            self.state = 103
            self.match(ZOLParser.T__8)
            self.state = 104
            self.match(ZOLParser.IDENTIFIER)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZOLParser.T__12:
                self.state = 105
                self.match(ZOLParser.T__12)
                self.state = 106
                self.match(ZOLParser.INTEGER)


            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ZOLParser.T__4:
                self.state = 109
                self.match(ZOLParser.T__4)
                self.state = 110
                self.match(ZOLParser.IDENTIFIER)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ZOLParser.T__12:
                    self.state = 111
                    self.match(ZOLParser.T__12)
                    self.state = 112
                    self.match(ZOLParser.INTEGER)


                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(ZOLParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpec(self):
            return self.getTypedRuleContext(ZOLParser.TypeSpecContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZOLParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(ZOLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ZOLParser.RULE_variableDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDecl" ):
                return visitor.visitVariableDecl(self)
            else:
                return visitor.visitChildren(self)




    def variableDecl(self):

        localctx = ZOLParser.VariableDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variableDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.typeSpec(0)
            self.state = 123
            self.match(ZOLParser.IDENTIFIER)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZOLParser.T__12:
                self.state = 124
                self.match(ZOLParser.T__12)
                self.state = 125
                self.expression(0)


            self.state = 128
            self.match(ZOLParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(ZOLParser.BlockContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(ZOLParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(ZOLParser.WhileStatementContext,0)


        def repeatStatement(self):
            return self.getTypedRuleContext(ZOLParser.RepeatStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(ZOLParser.ForStatementContext,0)


        def matchStatement(self):
            return self.getTypedRuleContext(ZOLParser.MatchStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(ZOLParser.ExpressionStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(ZOLParser.ReturnStatementContext,0)


        def asmBlock(self):
            return self.getTypedRuleContext(ZOLParser.AsmBlockContext,0)


        def getRuleIndex(self):
            return ZOLParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ZOLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.ifStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 132
                self.whileStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 133
                self.repeatStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 134
                self.forStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 135
                self.matchStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 136
                self.expressionStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 137
                self.returnStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 138
                self.asmBlock()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZOLParser.StatementContext)
            else:
                return self.getTypedRuleContext(ZOLParser.StatementContext,i)


        def getRuleIndex(self):
            return ZOLParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = ZOLParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(ZOLParser.T__8)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZOLParser.T__1) | (1 << ZOLParser.T__8) | (1 << ZOLParser.T__13) | (1 << ZOLParser.T__15) | (1 << ZOLParser.T__16) | (1 << ZOLParser.T__17) | (1 << ZOLParser.T__18) | (1 << ZOLParser.T__21) | (1 << ZOLParser.T__22) | (1 << ZOLParser.T__27) | (1 << ZOLParser.T__41) | (1 << ZOLParser.T__42))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (ZOLParser.IDENTIFIER - 64)) | (1 << (ZOLParser.INTEGER - 64)) | (1 << (ZOLParser.FLOAT - 64)) | (1 << (ZOLParser.BOOLEAN - 64)))) != 0):
                self.state = 142
                self.statement()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self.match(ZOLParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ZOLParser.ExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZOLParser.BlockContext)
            else:
                return self.getTypedRuleContext(ZOLParser.BlockContext,i)


        def ifStatement(self):
            return self.getTypedRuleContext(ZOLParser.IfStatementContext,0)


        def getRuleIndex(self):
            return ZOLParser.RULE_ifStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = ZOLParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(ZOLParser.T__13)
            self.state = 151
            self.expression(0)
            self.state = 152
            self.block()
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZOLParser.T__14:
                self.state = 153
                self.match(ZOLParser.T__14)
                self.state = 156
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ZOLParser.T__13]:
                    self.state = 154
                    self.ifStatement()
                    pass
                elif token in [ZOLParser.T__8]:
                    self.state = 155
                    self.block()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ZOLParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(ZOLParser.BlockContext,0)


        def getRuleIndex(self):
            return ZOLParser.RULE_whileStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = ZOLParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(ZOLParser.T__15)
            self.state = 161
            self.expression(0)
            self.state = 162
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RepeatStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(ZOLParser.INTEGER, 0)

        def block(self):
            return self.getTypedRuleContext(ZOLParser.BlockContext,0)


        def getRuleIndex(self):
            return ZOLParser.RULE_repeatStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeatStatement" ):
                return visitor.visitRepeatStatement(self)
            else:
                return visitor.visitChildren(self)




    def repeatStatement(self):

        localctx = ZOLParser.RepeatStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_repeatStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(ZOLParser.T__16)
            self.state = 165
            self.match(ZOLParser.INTEGER)
            self.state = 166
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ZOLParser.IDENTIFIER)
            else:
                return self.getToken(ZOLParser.IDENTIFIER, i)

        def block(self):
            return self.getTypedRuleContext(ZOLParser.BlockContext,0)


        def getRuleIndex(self):
            return ZOLParser.RULE_forStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = ZOLParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(ZOLParser.T__17)
            self.state = 169
            self.match(ZOLParser.IDENTIFIER)
            self.state = 170
            self.match(ZOLParser.T__6)
            self.state = 171
            self.match(ZOLParser.IDENTIFIER)
            self.state = 172
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MatchStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ZOLParser.ExpressionContext,0)


        def matchCase(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZOLParser.MatchCaseContext)
            else:
                return self.getTypedRuleContext(ZOLParser.MatchCaseContext,i)


        def getRuleIndex(self):
            return ZOLParser.RULE_matchStatement
